# My-ESPecial-Finca

./: GETCONF_Command  LICENSE  README.md  SET_COMMAND  SET_COMMAND v2.0  Sensores  custom_partition_table.csv
Base_Project_OTA/: CMakeLists.txt  http_server.c  main.c  mqtt.c  mqtt_app.c  mqtt_app.h  task_common.h  wifi_app.c  wifi_app.h
Base_Project_OTA/gpios/: led_rgb.c  led_rgb.h
DataBase/: dbdatasender.c  pr_publish_inserted.sql  pr_update_esp32_uptime.sql  tables.sql  tg_info_ai_fer.sql  tg_publish_ai_fer.sql  v_last_info.sql  views.sql
MESPF_MOBILE_APP/: AddEspActivity.kt  Esp32.kt  Esp32Provider.kt  MainActivity.kt  README.txt
MESPF_MOBILE_APP/adapter/: EspViewHolder.kt
MESPF_MOBILE_APP/models/: Mqtt.kt  MqttResultado.kt
MESPF_MOBILE_APP/res/drawable/: conexion_buena_imagen.xml  conexion_inexistente_imagen.xml  ic_add_circle_menu.xml  (+1 more)
MESPF_MOBILE_APP/tfg_boceto/: EditEspActivity.kt  Esp32.kt  Esp32Provider.kt  MainActivity.kt  ScanActivity.kt
MESPF_Publisher/: CMakeLists.txt  gpios_manager.c  gpios_manager.h  http_server.c  http_server.h  log.c  log.h  main.c  mqtt_app.c  mqtt_app.h  nvs_app.c  nvs_app.h  recollecter.c  recollecter.h  sensors_manager.c  sensors_manager.h  status.c  status.h  task_common.h  test_sntp.c  tests.c  wifi_app.c  wifi_app.h
MESPF_Publisher/gpios/: dht22.c  dht22.h  esp_idf_lib_helpers.h  hc_rs04.c  hc_rs04.h  lcd.c  lcd.h  mq2.c  mq2.h  ra_sen.c  ra_sen.h  rtc.c  rtc.h  so_sen.c  so_sen.h
MESPF_Publisher/mqtt/: mqtt_app.c  mqtt_app.h  mqtt_commands.c  mqtt_commands.h  mqtt_topics.h
MESPF_Publisher/webpage/: app.css  app.js  index.html
(+86 files in other folders)
